--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "new_server",
+  "name": "mongo_just_meat_server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/app.ts",
     "build": "tsc -p .",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha MongoJustMeatServer/tests/test.ts",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha src/tests/test.ts",
     "test-watch": "nodemon --exec 'npm test'"
   },
   "keywords": [],
