--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "start": "nodemon src/app.ts",
     "build": "tsc -p .",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha src/tests/test.ts",
-    "test-watch": "nodemon --exec 'npm test'"
+    "test": "mocha src/tests/test.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.6",
+    "@types/mocha": "^5.2.7",
     "@types/supertest": "^2.0.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -29,6 +29,9 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.3.6",
     "@types/mongoose": "^5.5.41",
+    "chai": "^4.2.0",
+    "expect": "^24.9.0",
+    "mocha": "^7.0.0",
     "supertest": "^4.0.2"
   }
 }
