--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.10",
     "nodemon": "^2.0.2",
+    "swagger-ui-express": "^4.1.3",
     "type": "^2.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/mongoose": "^5.7.0",
+    "@types/swagger-ui-express": "^4.1.1",
     "chai": "^4.2.0",
     "expect": "^24.9.0",
     "mocha": "^7.0.1",
