--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "start": "node lib/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc -p .",
-    "test": "tsc -p . && mocha lib/tests --timeout 10000",
-    "heroku-postbuild": "npm run build"
+    "test": "tsc -p . && mocha lib/tests --timeout 10000"
   },
   "keywords": [],
   "author": "",
