--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0",
     "swagger-ui-express": "^4.1.3",
-    "type": "^2.0.0"
+    "tsc": "^1.20150623.0",
+    "type": "^2.0.0",
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
